# LOVELYKITCHEN

./: README.md
crm/: .dockerignore  .gitignore  .ruff_commands.sh  Dockerfile  docker-compose.yml  main.py  mypy.ini  pyproject.toml
crm/activities/: entities.py  enums.py  exceptions.py  models.py  providers.py  repositories.py  router.py  schemas.py  usecases.py
crm/analytics/: entities.py  providers.py  router.py  schemas.py  usecases.py
crm/auth/: entities.py  exceptions.py  providers.py  router.py  schemas.py  services.py  usecases.py
crm/contacts/: entities.py  exceptions.py  models.py  providers.py  repositories.py  router.py  schemas.py  usecases.py
crm/core/: container.py  exception_handler.py  exceptions.py
crm/core/database/: providers.py  unit_of_work.py
crm/core/environment/: config.py  providers.py
crm/deals/: entities.py  enums.py  exceptions.py  models.py  providers.py  repositories.py  router.py  schemas.py  usecases.py
crm/migrations/: env.py
crm/migrations/versions/: cd9d6935887a_init_migration.py
crm/organizations/: entities.py  exceptions.py  models.py  providers.py  repositories.py  router.py  schemas.py  usecases.py
crm/startup_scripts/: entrypoint.sh
crm/tasks/: entities.py  exceptions.py  models.py  providers.py  repositories.py  router.py  schemas.py  usecases.py
crm/tests/: conftest.py  test_auth.py  test_contacts.py  test_deals.py  test_organizations.py  test_users.py
crm/users/: entities.py  enums.py  exceptions.py  models.py  providers.py  repositories.py  router.py  schemas.py  usecases.py
