[tool.poetry]
package-mode = false

[project]
name = "lovelykitchencrm"
version = "1.3.3.7"
description = "Test task for любимая кухня"
authors = [
    {name = "FourZd",email = "shogo.ryaskov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "dishka (>=1.7.2,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "greenlet (>=3.2.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
ruff = "^0.8.4"

[tool.ruff]
# Максимальная длина строки
line-length = 100

# Python версия
target-version = "py312"

# Исключить из проверки
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "*.egg-info",
]

[tool.ruff.lint]
# Включить правила
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "RUF", # Ruff-specific rules
]

# Игнорировать правила
ignore = [
    "E501",  # Длина строки (уже настроено через line-length)
    "B008",  # Вызов функций в аргументах по умолчанию (для FastAPI Depends)
    "DTZ005", # datetime.now() без tz (используем timezone.utc явно где нужно)
]

# Автоматические исправления
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Настройки сортировки импортов
known-first-party = ["auth", "users", "organizations", "contacts", "deals", "tasks", "activities", "analytics", "core"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Форматирование кода
quote-style = "double"
indent-style = "space"
line-ending = "auto"

